--- a/RunAway.css
+++ b/RunAway.css
@@ -1,3 +1,11 @@
+/*
+ * Michael Gutierrez
+ * Matthew Johnson
+ * CMPT 120L-115
+ * December 11, 2015
+ * Version 1.0
+*/
+
 h1 {
 	color: red;
 	text-align: center;
